v1.0.8: fix stop string support, response body leak, realCallHooked race, deprecated newInstance
- LocalApiGateway: handle 'stop' parameter as string (OpenAI allows string or array)
- GlmBackend: close response body on getResponseCode() exception to prevent connection leak
- Main: replace volatile boolean with AtomicBoolean.compareAndSet() for thread-safe hook guard
- GlmBackend: replace deprecated Class.newInstance() with getDeclaredConstructor().newInstance()
- Update version strings 1.0.7 → 1.0.8